--- a/pesde.toml
+++ b/pesde.toml
@@ -1,5 +1,6 @@
 name = "synpixel/roblimp"
 version = "0.1.0"
+description = "An auto-generated wrapper around Roblox's API"
 authors = ["synpixel"]
 repository = "https://github.com/synpixel/roblimp"
 license = "MIT"
