--- a/pesde.toml
+++ b/pesde.toml
@@ -4,7 +4,7 @@ description = "An auto-generated wrapper around Roblox's API"
 authors = ["synpixel"]
 repository = "https://github.com/synpixel/roblimp"
 license = "MIT"
-includes = ["pesde.toml", "README.md", "LICENSE", "build", "utils"]
+includes = ["pesde.toml", "README.md", "LICENSE", "build"]
 private = true
 
 [target]
