refactor: rename some methods

--- a/json/mappings.json
+++ b/json/mappings.json
@@ -236,7 +236,7 @@
     "/v1/roles": { "get": "roles" },
     "/v1/user/groups/pending": { "get": "pending" },
     "/v1/users/{userId}/friends/groups/roles": { "get": "withFriendsOf" },
-    "/v1/users/{userId}/groups/primary/role": { "get": "primary" },
+    "/v1/users/{userId}/groups/primary/role": { "get": "primaryOf" },
     "/v1/groups/{groupId}/change-owner": { "post": "giveOwnership" },
     "/v1/groups/{groupId}/claim-ownership": { "post": "claimOwnership" },
     "/v1/groups/{groupId}/payouts/recurring": {
@@ -285,7 +285,7 @@
       "get": "messages",
       "post": "sendMessage"
     },
-    "/v2/users/{userId}/groups/roles": { "get": "rolesOf" }
+    "/v2/users/{userId}/groups/roles": { "get": "memberships" }
   },
   "inventory": {
     "/v1/users/{userId}/assets/collectibles": { "get": "collectibles" },
