refactor: rename some methods

--- a/json/mappings.json
+++ b/json/mappings.json
@@ -122,15 +122,15 @@
     "/v1/my/friends/count": { "get": "count" },
     "/v1/my/friends/requests": { "get": "friendRequests" },
     "/v1/user/friend-requests/count": { "get": "countFriendRequests" },
-    "/v1/users/{targetUserId}/followers": { "get": "followersOf" },
-    "/v1/users/{targetUserId}/followers/count": { "get": "countFollowersOf" },
-    "/v1/users/{targetUserId}/followings": { "get": "followingsOf" },
-    "/v1/users/{targetUserId}/followings/count": { "get": "countFollowingsOf" },
+    "/v1/users/{targetUserId}/followers": { "get": "followers" },
+    "/v1/users/{targetUserId}/followers/count": { "get": "countFollowers" },
+    "/v1/users/{targetUserId}/followings": { "get": "followings" },
+    "/v1/users/{targetUserId}/followings/count": { "get": "countFollowings" },
     "/v1/users/{userId}/friends": { "get": "of" },
-    "/v1/users/{userId}/friends/count": { "get": "countFriendsOf" },
-    "/v1/users/{userId}/friends/find": { "get": "friendshipsOf" },
-    "/v1/users/{userId}/friends/inactive": { "get": "inactiveFriendsOf" },
-    "/v1/users/{userId}/friends/online": { "get": "onlineFriendsOf" },
+    "/v1/users/{userId}/friends/count": { "get": "countFriends" },
+    "/v1/users/{userId}/friends/find": { "get": "friendships" },
+    "/v1/users/{userId}/friends/inactive": { "get": "inactiveFriends" },
+    "/v1/users/{userId}/friends/online": { "get": "onlineFriends" },
     "/v1/users/{userId}/friends/search": { "get": "search" },
     "/v1/user/{userId}/multiget-are-friends": { "post": "areFriends" },
     "/v1/user/following-exists": { "post": "following" },
