--- a/json/mappings.json
+++ b/json/mappings.json
@@ -109,7 +109,7 @@
   },
   "followings": {
     "/v1/users/{userId}/universes/{universeId}/status": {
-      "get": "followingStatus"
+      "get": "status"
     },
     "/v1/users/{userId}/universes/{universeId}": {
       "post": "follow",
@@ -120,33 +120,33 @@
   "friends": {
     "/v1/metadata": { "get": "metadata" },
     "/v1/my/friends/count": { "get": "count" },
-    "/v1/my/friends/requests": { "get": "friendRequests" },
-    "/v1/user/friend-requests/count": { "get": "countFriendRequests" },
+    "/v1/my/friends/requests": { "get": "requests" },
+    "/v1/user/friend-requests/count": { "get": "countRequests" },
     "/v1/users/{targetUserId}/followers": { "get": "followers" },
     "/v1/users/{targetUserId}/followers/count": { "get": "countFollowers" },
     "/v1/users/{targetUserId}/followings": { "get": "followings" },
     "/v1/users/{targetUserId}/followings/count": { "get": "countFollowings" },
     "/v1/users/{userId}/friends": { "get": "of" },
-    "/v1/users/{userId}/friends/count": { "get": "countFriends" },
+    "/v1/users/{userId}/friends/count": { "get": "count" },
     "/v1/users/{userId}/friends/find": { "get": "friendships" },
-    "/v1/users/{userId}/friends/inactive": { "get": "inactiveFriends" },
-    "/v1/users/{userId}/friends/online": { "get": "onlineFriends" },
+    "/v1/users/{userId}/friends/inactive": { "get": "inactive" },
+    "/v1/users/{userId}/friends/online": { "get": "online" },
     "/v1/users/{userId}/friends/search": { "get": "search" },
     "/v1/user/{userId}/multiget-are-friends": { "post": "areFriends" },
     "/v1/user/following-exists": { "post": "following" },
     "/v1/user/friend-requests/decline-all": {
-      "post": "declineAllFriendRequests"
+      "post": "declineAllRequests"
     },
     "/v1/users/{requesterUserId}/accept-friend-request": {
-      "post": "acceptFriendRequest"
+      "post": "acceptRequest"
     },
     "/v1/users/{requesterUserId}/decline-friend-request": {
-      "post": "declineFriendRequest"
+      "post": "declineRequest"
     },
     "/v1/users/{targetUserId}/follow": { "post": "follow" },
     "/v1/users/{targetUserId}/unfollow": { "post": "unfollow" },
     "/v1/users/{targetUserId}/request-friendship": {
-      "post": "sendFriendRequest"
+      "post": "sendRequest"
     },
     "/v1/users/{targetUserId}/unfriend": { "post": "unfriend" }
   },
