--- a/json/mappings.json
+++ b/json/mappings.json
@@ -45,7 +45,7 @@
     "/v2/avatar/users/{userId}/avatar": { "get": "of" },
     "/v2/avatar/users/{userId}/outfits": { "get": "outfitsOf" },
     "/v2/avatar/set-body-colors": { "post": "setBodyColors" },
-    "/v2/avatar/set-wearing-assets": { "post": "setAssetsWorn" },
+    "/v2/avatar/set-wearing-assets": { "post": "wearAssets" },
     "/v3/outfits/{userOutfitId}/details": { "get": "outfit" },
     "/v3/outfits/create": { "post": "createOutfit" },
     "/v3/outfits/{userOutfitId}": { "patch": "updateOutfit" }
