--- a/json/mappings.json
+++ b/json/mappings.json
@@ -235,7 +235,7 @@
     "/v1/groups/search/lookup": { "get": "lookup" },
     "/v1/roles": { "get": "roles" },
     "/v1/user/groups/pending": { "get": "pending" },
-    "/v1/users/{userId}/friends/groups/roles": { "get": "withFriendsOf" },
+    "/v1/users/{userId}/friends/groups/roles": { "get": "withFriends" },
     "/v1/users/{userId}/groups/primary/role": { "get": "primary" },
     "/v1/groups/{groupId}/change-owner": { "post": "giveOwnership" },
     "/v1/groups/{groupId}/claim-ownership": { "post": "claimOwnership" },
