refactor: move to snake_case

--- a/pesde.toml
+++ b/pesde.toml
@@ -1,5 +1,5 @@
 name = "synpixel/roblimp"
-version = "0.1.1"
+version = "0.2.0"
 description = "An auto-generated wrapper around Roblox's API"
 authors = ["synpixel"]
 repository = "https://github.com/synpixel/roblimp"
@@ -10,11 +10,14 @@ includes = ["pesde.toml", "README.md", "LICENSE", "build"]
 environment = "lune"
 lib = "build/init.luau"
 
-[scripts]
-build = "scripts/build.luau"
+[engines]
+lune = "^0.8.9"
 
 [indices]
 default = "https://github.com/daimond113/pesde-index"
 
 [dependencies]
 result = { name = "lukadev_0/result", version = "^1.2.0" }
+
+[dev_dependencies]
+stylua = { name = "pesde/stylua", version = "^2.0.2" }
