refactor: full rewrite

--- a/.luaurc
+++ b/.luaurc
@@ -1,6 +1,6 @@
 {
   "languageMode": "strict",
   "aliases": {
-    "lune": "~/.lune/.typedefs/0.8.9"
+    "lune": "~/.lune/.typedefs/0.10.2/"
   }
 }
