--- a/pesde.toml
+++ b/pesde.toml
@@ -1,6 +1,6 @@
 name = "synpixel/roblimp"
 version = "0.1.1"
-description = "An auto-generated wrapper around Roblox's legacy and cloud APIs"
+description = "Auto-generated wrapper around Roblox's legacy and cloud APIs"
 authors = ["synpixel"]
 repository = "https://github.com/synpixel/roblimp"
 license = "MIT"
